terminado todo lo la vista de usuario

--- a/src/config/templates/main/principal.html
+++ b/src/config/templates/main/principal.html
@@ -8,9 +8,9 @@
                 <li><a href="/fronted/indexservice">serviços</a></li>
                 <li><a href="/fronted/indexsobre">sobre</a></li>
                 <li><a href="/fronted/indexcontacto">contato</a></li>
-                <li><a href="#">agendar cita</a></li>
-                <li><a href="#">ver citas</a></li>
-                <li><a href="#">registar</a></li>
+                <li><a href="/fronted/indexcita">agendar cita</a></li>
+                <li><a href="/fronted/tablauser">ver citas</a></li>
+                <li><a href="/fronted/indexregistro">registar</a></li>
                 <li><a href="/fronted/indexlogin">logins</a></li>
             </ul>
         </nav>
@@ -38,14 +38,8 @@
 
 </div><!--container-->
 </header>
-
 <main>
-
-
-
-
 </main>
-
 <footer>
 <div class="container">
     <div class="box">
