--- a/src/config/templates/main/tablaadmin.html
+++ b/src/config/templates/main/tablaadmin.html
@@ -5,12 +5,10 @@
         <div class="logo"></div><!--logo-->
         <nav class="desktop-menu">
             <ul>         
-                <li><a href="/fronted/indexsobre">sobre</a></li>
-                <li><a href="/fronted/indexcontacto">contato</a></li>
-                <li><a href="/fronted/indexcita">agendar cita</a></li>
-                <li><a href="/fronted/tablauser">ver citas</a></li>
-                <li><a href="/fronted/indexregistro">registar</a></li>
-                <li><a href="/fronted/indexlogin">logins</a></li>
+                <li><a href="/fronted/indexcalendario">Calendario</a></li>
+                <li><a href="/fronted/indexadmin_tabla_paciente">Pacientes</a></li>
+                <li><a href="/fronted/indexadmin_tabla_medico">Medicos</a></li>
+                <li><a href="/fronted/indexprincipal">Cerrar sesion</a></li>
             </ul>
         </nav>
     </div>
@@ -19,9 +17,9 @@
   <div class="tabla_de_mi_cita">
     <div class="d-flex mb-3">
   <input type="text" id="buscadorcitasadmin" onkeyup="buscadordecitas()" class="form-control mr-2" placeholder="Buscar en la tabla...">
-  <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
-  <button id="myBtn_1" class="btn btn-primary" type="button">Nueva cita</button>
-  <button id="myBtn_2" class="btn btn-primary" type="button">Citas disponibles</button>
+  <button class="btn btn-primary1" type="button" id="boton-buscar">Buscar</button>
+  <button id="myBtn_1" class="btn btn-primary2" type="button">Nueva cita</button>
+  <button id="myBtn_2" class="btn btn-primary3" type="button">Citas disponibles</button>
 </div>
 
     <div class="table-responsive_citas">
