--- a/src/config/templates/main/admin_tabla_paciente.html
+++ b/src/config/templates/main/admin_tabla_paciente.html
@@ -6,8 +6,8 @@
       <nav class="desktop-menu">
           <ul>         
               <li><a href="/fronted/indexcalendario">Calendario</a></li>
-              <li><a href="/fronted/indexadmin_tabla_paciente">Pacientes</a></li>
-              <li><a href="/fronted/indexadmin_tabla_medico">Medicos</a></li>
+              <li><a href="/fronted/indexadmin_tabla_medico">Medico</a></li>
+              <li><a href="/fronted/indexcita2">Citas</a></li>
               <li><a href="/fronted/indexprincipal">Cerrar sesion</a></li>
           </ul>
       </nav>
