--- a/src/config/static/css/style2.css
+++ b/src/config/static/css/style2.css
@@ -875,3 +875,120 @@ body {
     margin-bottom: 1rem !important;
     margin-right: 597px;
 }
+
+/* css de tablas paciente */
+
+.contenedor_de_la_tabla {
+    margin-top: 20px;
+  }
+  
+  .tabla_de_mi_cita {
+    margin-top: 100px;
+    max-width: 1400px;
+    margin-left: 180px;
+  }
+  
+  .mb-3 {
+    margin-bottom: 1rem !important;
+    margin-right: 597px;
+  }
+
+  .modal_tabla_paciente {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content3 {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .modal_tabla_paciente_admin_actualizar {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content3-actualizar {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  /* css de tabla odontologo */
+  .contenedor_de_la_tabla {
+    margin-top: 20px;
+  }
+  
+  .tabla_de_mi_cita {
+    margin-top: 100px;
+    max-width: 1400px;
+    margin-left: 180px;
+  }
+  
+  .mb-3 {
+    margin-bottom: 1rem !important;
+    margin-right: 597px;
+  }
+  
+  .table-responsive_medico {
+    overflow-x: auto;
+  }
+  
+  .modal_tabla_odontologo {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content4 {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  .modal_tabla_odontologo_admin_actulizar {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  
+  .modal-content4-actualizar {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
