--- a/src/config/templates/main/calendario_admin.html
+++ b/src/config/templates/main/calendario_admin.html
@@ -20,14 +20,13 @@
                 <a style="color: black;"  href="/fronted/indexcita2">Citas</a>
                 <a style="color: black;"  href="/fronted/indexadmin_tabla_paciente">Pacientes</a>
                 <a style="color: black;"  href="/fronted/indexadmin_tabla_medico">Medicos</a>
-                <a style="color: black;" href="indexcita">Cerrar sesion</a>
+                <a style="color: black;" href="/fronted/indexprincipal">Cerrar sesion</a>
             </nav>
         </div>
     </header>
     <div class="capa"></div>
     <div class="content-body">
         <div class="container-fluid">
-
             <div class="row page-titles">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item active"><a href="javascript:void(0)">App</a></li>
