PORFIN ARREGLE LOS BOTONES

--- a/src/config/templates/main/admin_tabla_paciente.html
+++ b/src/config/templates/main/admin_tabla_paciente.html
@@ -18,8 +18,8 @@
     <div class="d-flex mb-3">
       <input type="text" id="buscadorpacienteadmin" onkeyup="buscadorpaciente()" class="form-control mr-2"
         placeholder="Buscar en la tabla...">
-      <button class="btn btn-primary" type="button" id="boton-buscar">Buscar</button>
-      <button id="myBtn_3" class="btn btn-primary" type="button">Nuevo paciente</button>
+      <button class="btn btn-primary4" type="button" id="boton-buscar">Buscar</button>
+      <button id="myBtn_3" class="btn btn-primary5" type="button">Nuevo paciente</button>
     </div>
     <div class="table-responsive_paciente">
       <table class="table">
